--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,10 @@
   }
 }
 
+
+#mainDiv {}
+
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -32,6 +36,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
@@ -40,58 +45,57 @@
 @import url('https://fonts.googleapis.com/css2?family=Tourney:wght@600&display=swap');
 
 
-h1{
+h1 {
 
-  font-size: 50px;
+  font-size: 40px;
   font-weight: 1000;
   color: red;
   position: relative;
- font-family:'Tourney', cursive;
-  width: 65%;
+  font-family: 'Tourney', cursive;
+  width: 28vw;
   margin: auto;
 }
 
-h2{
-  font-size: 25px;
+h2 {
+  font-size: 22px;
   font-weight: 20;
   color: red;
   position: relative;
- font-family:'Tourney', cursive;
- 
+  font-family: 'Tourney', cursive;
+
 }
 
 .headPic {
   width: 100px;
   height: 100px;
   position: relative;
-  top:33px;
+  top: 33px;
   left: 10px;
 }
 
-.typeButton{
+.notSelected {
 
   border: none;
   width: 120px;
   height: 40px;
-  
+
 }
 
-.typeButton2{
+.selected {
 
   border-style: solid;
   border-color: black;
   width: 120px;
   height: 40px;
-  
 }
 
 
-button:hover{
-  color: rgba(0,0,0,0.3);
+button:hover {
+  color: rgba(0, 0, 0, 0.3);
   cursor: pointer;
 }
 
-.addClick{
+.addClick {
 
   font-size: 110px;
   font-weight: 300px;
@@ -102,13 +106,13 @@ button:hover{
 
 }
 
-.addClick:hover{
+.addClick:hover {
   cursor: pointer;
-  color: rgba(0,0,0,0.3);
+  color: rgba(0, 0, 0, 0.3);
 
 }
 
-.submitButton{
+.submitButton {
 
   position: relative;
 
@@ -119,84 +123,164 @@ button:hover{
 
 
 
-#card{
+#card {
 
-    background-color: rgb(224, 99, 99);
-    width: 250px;
-    margin: 0 auto;
-    border-radius: 20px;
-    text-align:center;
-    align-items:center;
-    height: 620px;
+  background-color: rgb(253, 102, 102);
+  width: 250px;
+  margin: 0 auto;
+  border-radius: 20px;
+  text-align: center;
+  align-items: center;
+  height: 590px;
+  border-style: solid;
+  border-width: 1px;
+  border-color: black;
 
 }
 
-#card_head{
+#card_head {
 
 
-    background-color: rgb(250, 153, 153);
-    margin-bottom: 5px;
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
-    height: 300px;
+  background-color: rgb(248, 238, 238);
+  margin-bottom: 5px;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+  height: 280px;
+  border-bottom: black;
+  border-bottom-style: solid;
+
 }
 
-span{
-    background-color: rgb(250, 153, 153);
-    display: inline-block;
-    width: 120px;
-    height: 25px;
-    margin-top: 4px;
-    margin-bottom: 4.5px;
+.card_head_team {
+  background-color: rgb(248, 238, 238);
+  margin-bottom: 5px;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+  height: 300px;
+  border-bottom: black;
+  border-bottom-style: solid;
 }
 
-.sidebarSpan{
 
-   margin-top: 3px;
-   margin-bottom: 3px;
-   background-color: white;
-   font-weight: bold;
+span {
+  background-color: rgb(228, 182, 182);
+  display: inline-block;
+  width: 45px;
+  height: 25px;
+  margin-top: 4px;
+  margin-bottom: 4.5px;
+  margin-left: 10px;
+  border-radius: 7%;
 }
 
-.stat_div{
+.statName {
 
-    border-bottom-style: dotted;
-    border-width: 2.5px;
-    border-color: rgb(173, 5, 5);
-    width: 120%;
-    
+  background: none;
+  width: 110px;
 }
 
-#sidebar{
-position: absolute;
+.sidebarSpan {
+
+  margin-top: 3px;
+  background: none;
+  margin-bottom: 3px;
+  font-weight: bold;
+  width: 120%;
 }
 
-.right{
-    text-align: right;
+.stat_div {
+
+  border-bottom-style: dotted;
+  border-width: 2.5px;
+  border-color: rgb(173, 5, 5);
+  width: 1500%;
+  position: relative;
+  right: 78px;
+  top: 306.5px;
+
 }
 
-.cardHead{
-  font-size:x-large; 
+#sidebar {
+  position: absolute;
+}
+
+.right {
+  text-align: right;
+}
+
+table {
+  position: relative;
+  left: 20px;
+}
+
+.cardHead {
+  font-size: 22px;
+  padding-top: 5px;
+  width: 200px;
+  height: 60px;
   margin-bottom: 8px;
 }
 
 
-.playerFace{
+.playerFace {
 
   border-radius: 10%;
 }
 
-.playerCardDiv{
+.playerCardDiv {
 
   width: 80%;
   margin: auto;
 }
 
-.centerHead{
+.centerHead {
 
   position: relative;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 
+}
+
+.teamLogo {
+
+  border-radius: 20%;
+  position: relative;
+  top: 20px;
+
+}
+
+.goalieData {
+
+  padding-bottom: 10px;
+
+}
+
+
+html {
+  background-color: rgb(193, 187, 187);
+  background-image: url("./StickOnly.jpg");
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: 130vw 195vh;
+}
+
+.headerOptions {
+
+  background-color: rgb(228, 182, 182);
+  width: 375px;
+  padding-right: 10px;
+  padding-top: 10px;
+  padding-bottom: 12px;
+  border-style: solid;
+  border-color: black;
+  border-width: 1px;
+  position: relative;
+  text-align: right;
+
+}
+
+#submitButton {
+  position: relative;
+  top: 5px;
 }
